prevent codeblock from overflowing

--- a/src/app/common/elements/markdown.less
+++ b/src/app/common/elements/markdown.less
@@ -71,6 +71,9 @@
         padding: 0.15em 0.5em;
         line-height: 1.5;
         cursor: default;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        overflow: auto;
     }
 
     .codeblock-actions {
